--- a/public/index.html
+++ b/public/index.html
@@ -46,4 +46,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script crossorigin src="https://api.meteomatics.com/"></script>
 </html>
